# ABeautyCam

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/lin/abcdq/vdmake/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/lin/abcdq/vdmake/: CameraActivity.kt  MainActivity.kt  PlayerActivity.kt  VdFragment.kt
app/src/main/java/lin/abcdq/vdmake/utils/: Permission.kt  PermissionHandler.kt  VdUIHelper.kt
app/src/main/java/lin/abcdq/vdmake/view/: Pager2FragmentAdapter.kt  VdBanner.kt  VdStatusBar.kt
app/src/main/java/lin/abcdq/vdmake/view/recyclerview/adapter/: AdapterFactory.kt  GridLayoutBinder.kt  LinearLayoutBinder.kt  StaggeredLayoutBinder.kt
app/src/main/java/lin/abcdq/vdmake/view/recyclerview/decoration/: GridDecoration.kt  GroupDecoration.kt  LinearDecoration.kt  StaggeredDecoration.kt
app/src/main/java/lin/abcdq/vdmake/view/recyclerview/manager/: GridManager.kt  LinearManager.kt  StaggeredManager.kt
app/src/main/res/drawable/: camera_shotted.xml  camera_shotting.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_player.xml  fragment_main.xml  item_main_banner.xml  item_main_list.xml  vd_banner.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/lin/abcdq/vdmake/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_vd/: CMakeLists.txt  build.gradle
lib_vd/libs/: licensemanager.aar
lib_vd/src/androidTest/java/lin/abcdq/vd/: ExampleInstrumentedTest.kt
lib_vd/src/main/: AndroidManifest.xml
lib_vd/src/main/cpp/: CMakeLists.txt  MLOG.h
lib_vd/src/main/cpp/alignment/include/alignment/: cfan.cpp  common.h  face_alignment.cpp  face_alignment.h
lib_vd/src/main/cpp/facecnn/include/: facedetectcnn.h
lib_vd/src/main/cpp/facecnn/render/: FaceCnnDetection.cpp  FaceCnnDetection.h
lib_vd/src/main/cpp/ffmpeg/codec/: AudioCodec.cpp  AudioCodec.h  AudioDecode.cpp  AudioDecode.h  BaseCodec.cpp  BaseCodec.h  BaseDecode.cpp  BaseDecode.h  VideoCodec.cpp  VideoCodec.h  VideoDecode.cpp  VideoDecode.h
lib_vd/src/main/cpp/ffmpeg/include/libavformat/: avformat.h
lib_vd/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h  spherical.h
lib_vd/src/main/cpp/ffmpeg/record/: MediaRecord.cpp  MediaRecord.h
lib_vd/src/main/cpp/filter/: GaussBlur.cpp  GaussBlur.h
lib_vd/src/main/cpp/ncnn/include/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake
lib_vd/src/main/cpp/ncnn/include/arm64-v8a/ncnn/: net.h  platform.h
lib_vd/src/main/cpp/ncnn/include/armeabi-v7a/lib/cmake/ncnn/: ncnn-release.cmake
lib_vd/src/main/cpp/ncnn/render/: FaceNCNNDetection.cpp  FaceNCNNDetection.h  scrfd.cpp  scrfd.h
lib_vd/src/main/cpp/opencv/render/: FaceCheck.cpp  FaceCheck.h  FaceCvDetection.cpp  FaceCvDetection.h  FaceCvTrack.cpp  FaceCvTrack.h
lib_vd/src/main/cpp/opengles/include/glm/gtc/: matrix_transform.hpp
lib_vd/src/main/cpp/opengles/render/: Shaders.h  VideoRender.cpp  VideoRender.h
lib_vd/src/main/cpp/opengles/utils/: GLUtils.cpp  GLUtils.h
lib_vd/src/main/cpp/opensles/render/: AudioRender.cpp  AudioRender.h  BaseSL.cpp  BaseSL.h
lib_vd/src/main/cpp/src/: common.h  recode.cpp  recode.h  repack.cpp  repack.h
lib_vd/src/main/cpp/utils/: Log.h  PixAudio.h  PixImage.h
lib_vd/src/main/cpp/vd/: Jni_native.cpp
lib_vd/src/main/cpp/vd/camera/: VdCameraRender.cpp  VdCameraRender.h
lib_vd/src/main/cpp/vd/player/: VdPlayer.cpp  VdPlayer.h
lib_vd/src/main/cpp/vd/record/: VdRecord.cpp  VdRecord.h
lib_vd/src/main/java/lin/abcdq/vd/camera/: CameraUse.kt  VdCamera.kt
lib_vd/src/main/java/lin/abcdq/vd/camera/util/: AssetUtils.java  CAO.kt  ImageUtils.kt
lib_vd/src/main/java/lin/abcdq/vd/camera/wrap/: CameraWrap.kt  CameraWrapCall.kt
lib_vd/src/main/java/lin/abcdq/vd/facepp/: FacePlus.kt
lib_vd/src/main/java/lin/abcdq/vd/facepp/utils/: ConUtil.java  SharedUtil.java  Util.java
lib_vd/src/main/java/lin/abcdq/vd/player/: VdPlayer.kt
lib_vd/src/main/java/lin/abcdq/vd/record/: ARecord.kt  VdRecord.kt
lib_vd/src/test/java/lin/abcdq/vd/: ExampleUnitTest.kt
